--- a/Outdoor_Navigation/app/src/main/res/layout/activity_main.xml
+++ b/Outdoor_Navigation/app/src/main/res/layout/activity_main.xml
@@ -9,56 +9,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="0dp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Button
-                android:background="@drawable/buttonshape"
                 android:id="@+id/getLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonshape"
                 android:text="位置采集"
                 android:textColor="#ffffff"
                 android:textSize="60px" />
-            <Button
-                android:background="@drawable/buttonshape"
-                android:id="@+id/searchBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="打开蓝牙"
-                android:textColor="#ffffff"
-                android:textSize="60px" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/distance"
-                android:text="距离信息："/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:background="@drawable/input_column"
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="60px"
-                android:layout_marginLeft="60px"
-                android:layout_marginRight="60px"
-                android:hint="例：k1,k2"
-                android:layout_marginTop="30px"
-                android:layout_marginBottom="30px"
-                />
+                android:text="当前未接收到距离"/>
             <Button
-                android:background="@drawable/buttonshape"
-                android:id="@+id/setBtn"
+                android:id="@+id/searchBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="设定精度"
+                android:background="@drawable/buttonshape"
+                android:text="打开蓝牙"
                 android:textColor="#ffffff"
                 android:textSize="60px" />
 
